--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "restApi , authApi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.ts"
   },
   "keywords": [
     "restApis"
@@ -12,8 +12,12 @@
   "author": "Usman Rao",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@types/node": "^22.5.4",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.5.0"
   }
 }
