--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
- {
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "all"
- }
+{
+   "tabWidth": 2,
+   "semi": true,
+   "singleQuote": true,
+   "trailingComma": "all",
+   "spaces": false
+}
