--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@eslint/js": "^9.10.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
+    "@types/http-errors": "^2.0.4",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.4",
     "eslint": "^9.10.0",
@@ -26,6 +27,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^8.6.3"
   }
 }
