--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.5.4",
     "eslint": "^9.10.0",
@@ -30,6 +31,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3"
   }
 }
